# DA-PYTHON-10

./: .gitignore  README.md  db 2.sqlite3  db.sqlite3  pyproject.toml  requirements.txt
API_IssueTrackingSystem/: admin.py  models.py  permissions.py  serializers.py  views.py
API_IssueTrackingSystem copie/: models.py  serializers.py  views.py
API_IssueTrackingSystem/migrations/: 0007_rename_type_project_project_type_and_more.py  0007_rename_user_issue_assigned_to_comment_updated_time_and_more.py  0008_userprofile.py  0009_remove_userprofile_birth_date.py  0010_userprofile_birth_date.py  0011_alter_issue_assigned_to_alter_issue_status_and_more.py
authentication/: models.py  serializers.py  views.py
authentication/migrations/: 0001_initial.py  0002_rename_date_consent_date_given.py
config/: settings.py  urls.py
env/: pyvenv.cfg
flake-report/: API_IssueTrackingSystem.permissions.report.html  API_IssueTrackingSystem.permissions.source.html  API_IssueTrackingSystem.serializers.report.html  API_IssueTrackingSystem.serializers.source.html  config.urls.report.html  config.urls.source.html  index.html  manage.report.html  manage.source.html
presentation/: Projet10.pptx
project/: admin.py  models.py  permissions.py  serializers.py  views.py
project/migrations/: 0001_initial.py  0002_alter_project_contributor.py  0003_alter_comment_author_alter_comment_issue_and_more.py
softdesk/: settings.py  urls.py
users/: models.py  serializers.py  views.py
users/migrations/: 0001_initial.py
