[tool.poetry]
name = "softdesk"
version = "0.1.0"
description = ""
authors = ["TMee3  <theopsna@protonmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
validate-email-address = "^1"
django-rest-swagger = "^2.2.0"
drf-yasg = "^1.21.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
