[tool.poetry]
name = "ocr-projet-10-master 6"
version = "0.1.0"
description = ""
authors = ["TMee3  <theopsna@protonmail.com>"]
readme = "README.md"
packages = [{include = "ocr_projet_10_master 6"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.2.5"
djangorestframework = "^3.14.0"
djangorestframework-simplejwt = "^5.3.0"
pillow = "^10.0.0"
python-dateutil = "^2.8.2"
django-rest-framework-nested = "^0.0.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
flake8-html = "^0.4.3"

[tool.flake8]
exclude = "env/"
max-line-length = 119
format = "html"
htmldir = "flake-report"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
